# InterpreterForMython

./: CMakeLists.txt  README.md  lexer.cpp  lexer.h  lexer_test_open.cpp  main.cpp  parse.cpp  parse.h  runtime.cpp  runtime.h  statement.cpp  statement.h  statement_test.cpp
